--- a/Source/InceptionEngine/CMakeLists.txt
+++ b/Source/InceptionEngine/CMakeLists.txt
@@ -34,6 +34,10 @@ set(SRC_BUILD_FILES
 "ECS/Components/SkyboxComponent/SkyboxComponent.cpp"
 "ECS/Components/TransformComponent/TransformComponent.h"
 "ECS/Components/TransformComponent/TransformComponent.cpp"
+"ECS/Components/AnimationComponent/AnimationComponent.h"
+"ECS/Components/AnimationComponent/AnimationComponent.cpp"
+"ECS/Components/AnimationComponent/AnimStateMachine.h"
+"ECS/Components/AnimationComponent/AnimStateMachine.cpp"
 "ECS/Systems/Systems.h"
 "ECS/Systems/SystemBase.h"
 "ECS/Systems/SystemBase.cpp"
@@ -53,6 +57,12 @@ set(SRC_BUILD_FILES
 "Runtime/Animation/AnimPose.h"
 "Runtime/Animation/Animation.h"
 "Runtime/Animation/Animation.cpp"
+"Runtime/Animation/AnimInstance.h"
+"Runtime/Animation/AnimInstance.cpp"
+"Runtime/Animation/AnimNotify.h"
+"Runtime/Animation/AnimNotify.cpp"
+"Runtime/Animation/AnimSpeedBar.h"
+"Runtime/Animation/AnimSpeedBar.cpp"
 "Runtime/Animation/AnimationController.h"
 "Runtime/Animation/AnimationController.cpp"
 "Runtime/SkeletalMesh/SkeletalMesh.h"
