import sice animations, add sice weapon socket, add ASM state enter and quit callback

--- a/Source/StandAlone/CMakeLists.txt
+++ b/Source/StandAlone/CMakeLists.txt
@@ -1,4 +1,18 @@
-add_executable(StandAlone main.cpp)
+set(SRC_BUILD_FILES
+"main.cpp"
+"Milia/MiliaScript.h"
+"Milia/MiliaScript.cpp"
+"Milia/MiliaASM.h"
+"Milia/MiliaASM.cpp"
+"Sice/SiceScript.h"
+"Sice/SiceScript.cpp"
+"Sice/SiceASM.h"
+"Sice/SiceASM.cpp")
+
+add_executable(StandAlone ${SRC_BUILD_FILES})
+
+source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
+         FILES ${SRC_BUILD_FILES})
 
 target_include_directories(StandAlone PUBLIC ${PROJECT_SOURCE_DIR}/Source/InceptionEngine)
 
