--- a/Source/InceptionEngine/CMakeLists.txt
+++ b/Source/InceptionEngine/CMakeLists.txt
@@ -48,6 +48,7 @@ set(SRC_BUILD_FILES
 "ECS/Components/AnimationComponent/AnimSpeedRange.cpp"
 "ECS/Components/RigidbodyComponent/RigidbodyComponent.h"
 "ECS/Components/RigidbodyComponent/RigidbodyComponent.cpp"
+"ECS/Components/RigidbodyComponent/SphereTraceResult.h"
 "ECS/Systems/Systems.h"
 "ECS/Systems/SystemBase.h"
 "ECS/Systems/SystemBase.cpp"
@@ -86,6 +87,8 @@ set(SRC_BUILD_FILES
 "Runtime/SkeletalMesh/SkeletalMesh.cpp"
 "Runtime/SkeletalMesh/Skeleton.h"
 "Runtime/SkeletalMesh/Skeleton.cpp"
+"Runtime/Collision/CapsuleCollider.h"
+"Runtime/Collision/CapsuleCollider.cpp"
 "Runtime/RHI/Renderer/Renderer.h"
 "Runtime/RHI/Renderer/Renderer.cpp"
 "Runtime/RHI/Renderer/Vertex.h"
