--- a/Source/StandAlone/CMakeLists.txt
+++ b/Source/StandAlone/CMakeLists.txt
@@ -18,8 +18,9 @@ source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}"
 target_include_directories(StandAlone PUBLIC ${PROJECT_SOURCE_DIR}/Source/InceptionEngine ${PROJECT_SOURCE_DIR}/Source/StandAlone)
 
 target_link_libraries(StandAlone InceptionEngine)
-
+IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
 add_custom_command(TARGET StandAlone POST_BUILD 
  COMMAND ${CMAKE_COMMAND} -E copy_if_different 
         "${PROJECT_BINARY_DIR}/Source/InceptionEngine/Debug/InceptionEngine.dll"
         "${PROJECT_BINARY_DIR}/Source/StandAlone/Debug")
+ENDIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
