--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(Source)
+
+IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
