fix release build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,9 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(Source)
+
+#set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "debug")
+#set(CMAKE_BUILD_TYPE "Release" CACHE STRING "release")
+
+set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "build mode")
+set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release") 
