--- a/Source/StandAlone/CMakeLists.txt
+++ b/Source/StandAlone/CMakeLists.txt
@@ -25,5 +25,5 @@ target_link_libraries(StandAlone InceptionEngine)
 
 add_custom_command(TARGET StandAlone POST_BUILD 
  COMMAND ${CMAKE_COMMAND} -E copy_if_different 
-        "${PROJECT_BINARY_DIR}/Source/InceptionEngine/Debug/InceptionEngine.dll"
-        "${PROJECT_BINARY_DIR}/Source/StandAlone/Debug")
+        "${PROJECT_BINARY_DIR}/Source/InceptionEngine/${CMAKE_BUILD_TYPE}/InceptionEngine.dll"
+        "${PROJECT_BINARY_DIR}/Source/StandAlone/${CMAKE_BUILD_TYPE}")
